--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "run": "next dev"
   },
   "dependencies": {
+    "@unly/universal-language-detector": "^2.0.3",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "next": "^9.2.2",
