--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "lodash": "^4.17.21",
+    "mongodb": "^4.8.1",
     "next": "^9.2.2",
     "prettier": "^2.0.2",
     "react": "^16.13.1",
